--- a/jobms/src/main/resources/application.properties
+++ b/jobms/src/main/resources/application.properties
@@ -4,7 +4,13 @@ server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/job
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+#Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
