--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -15,3 +15,6 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 
+#zipkin
+management.tracing.sampling.probability=1.0
+
