--- a/companyms/src/main/resources/application.properties
+++ b/companyms/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/company
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
