--- a/jobms/src/main/resources/application.properties
+++ b/jobms/src/main/resources/application.properties
@@ -18,3 +18,8 @@ eureka.client.fetch-registry=true
 
 #zipkin
 management.tracing.sampling.probability=1.0
+
+
+#config-server
+spring.config.import=optional:configserver:http://localhost:8080
+spring.profiles.active=dev
