--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8083
 spring.datasource.url=jdbc:postgresql://localhost:5432/review
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
