Added the fatures of Rate Limiting , Circuit Breaking and Retry

--- a/jobms/src/main/resources/application.properties
+++ b/jobms/src/main/resources/application.properties
@@ -23,3 +23,30 @@ management.tracing.sampling.probability=1.0
 #config-server
 spring.config.import=optional:configserver:http://localhost:8080
 spring.profiles.active=dev
+
+
+
+
+#Resilience4j
+resilience4j.circuitbreaker.instances.jobBreaker.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.jobBreaker.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.jobBreaker.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.jobBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.jobBreaker.waitDurationInOpenState=10s
+resilience4j.circuitbreaker.instances.jobBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.jobBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.jobBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.jobBreaker.sliding-window-type=COUNT_BASED
+
+resilience4j.retry.instances.jobBreaker.max-attempts=5
+resilience4j.retry.instances.jobBreaker.wait-duration=2s
+
+
+resilience4j.ratelimiter.instances.jobBreaker.limit-for-period=5
+resilience4j.ratelimiter.instances.jobBreaker.limit-refresh-period=4
+resilience4j.ratelimiter.instances.jobBreaker.timeout-duration=10
+
+#Actuator
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
