added rabbitmq messageqeque

--- a/companyms/docker-compose.yml
+++ b/companyms/docker-compose.yml
@@ -39,7 +39,15 @@ services:
       - jobapp
     restart: unless-stopped
 
-
+  rabbitmq:
+    container_name: rabbitmq
+    image: rabbitmq:3-management
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - jobapp
+    restart: unless-stopped
 
 
 volumes:
