--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8083
 spring.datasource.url=jdbc:postgresql://localhost:5432/review
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -17,4 +17,11 @@ eureka.client.fetch-registry=true
 
 #zipkin
 management.tracing.sampling.probability=1.0
+
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 
