--- a/jobms/src/main/resources/application-docker.properties
+++ b/jobms/src/main/resources/application-docker.properties
@@ -2,33 +2,37 @@ spring.application.name=jobms
 server.port=8082
 
 
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
+job-service.url=http://job:8082
+company-service.url=http://company:8081
+review-service.url=http://review:8083
+
 
 #Postgresql Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/job
+spring.datasource.url=jdbc:postgresql://postgresms:5432/job
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://servicereg:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 
 #zipkin
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 
 #config-server
-spring.config.import=optional:configserver:http://localhost:8080
-spring.profiles.active=dev
+spring.config.import=optional:configserver:http://config-server-ms:8080
+#spring.profiles.active=dev
+
+
 
 
 #Resilience4j
