--- a/jobms/src/main/resources/application-k8s.properties
+++ b/jobms/src/main/resources/application-k8s.properties
@@ -1,13 +1,14 @@
-spring.application.name=jobms
+spring.application.name=job-service
 server.port=8082
 
 
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
+job-service.url=http://job
+company-service.url=http://company
+review-service.url=http://review
+
 
 #Postgresql Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/job
+spring.datasource.url=jdbc:postgresql://postgres:5432/job
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -17,18 +18,23 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://servicereg:8761/eureka
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+logging.level.debug=DEBUG
 
 
 #zipkin
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 
 #config-server
-spring.config.import=optional:configserver:http://localhost:8080
-spring.profiles.active=dev
+#spring.config.import=optional:configserver:http://config-server-ms:8080
+#spring.profiles.active=dev
+
+
 
 
 #Resilience4j
@@ -52,5 +58,5 @@ resilience4j.ratelimiter.instances.jobBreaker.timeout-duration=10
 
 #Actuator
 management.health.circuitbreakers.enabled=true
-management.endpoints.web.exposure.include=health
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
