--- a/reviewms/src/main/resources/application-docker.properties
+++ b/reviewms/src/main/resources/application-docker.properties
@@ -1,14 +1,16 @@
-spring.application.name=companyms
-server.port=8081
+spring.application.name=reviewms
+server.port=8083
 
 
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
+
+job-service.url=http://job:8082
+company-service.url=http://company:8081
+review-service.url=http://review:8083
+
 
 
 #Postgresql Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/company
+spring.datasource.url=jdbc:postgresql://postgresms:5432/review
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -17,16 +19,19 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://servicereg:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 
 #zipkin
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 #rabbitmq
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+
