--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=reviewms
 server.port=8083
+
+job-service.url=http://localhost:8082
+company-service.url=http://localhost:8081
+review-service.url=http://localhost:8083
+
+
 #Postgresql Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/review
 spring.datasource.username=postgres
