added docker compose

--- a/jobms/src/main/resources/application-docker.properties
+++ b/jobms/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-spring.application.name=jobms
+spring.application.name=jobms-dev
 server.port=8082
 
 
@@ -24,16 +24,13 @@ eureka.client.fetch-registry=true
 
 
 #zipkin
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/api/v2/spans
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 
 #config-server
 spring.config.import=optional:configserver:http://config-server-ms:8080
 #spring.profiles.active=dev
-
-
-
 
 #Resilience4j
 resilience4j.circuitbreaker.instances.jobBreaker.registerHealthIndicator=true
