--- a/jobms/src/main/resources/application-k8s.properties
+++ b/jobms/src/main/resources/application-k8s.properties
@@ -26,7 +26,7 @@ logging.level.debug=DEBUG
 
 
 #zipkin
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/api/v2/spans
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
 management.tracing.sampling.probability=1.0
 
 
