--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
 
   config-server-ms:
     container_name: config-server-ms
-    image: dipandhali2021/config-server-ms
+    image: dipandhali2021/configserverms-v0:latest
     ports:
       - 8080:8080
     depends_on:
@@ -47,7 +47,7 @@ services:
 
   servicereg:
     container_name: servicereg
-    image: dipandhali2021/servicereg:latest
+    image: dipandhali2021/serviceregms-v0:latest
     ports:
       - 8761:8761
     depends_on:
@@ -62,7 +62,7 @@ services:
 
   companyms:
     container_name: company
-    image: dipandhali2021/companyms:latest
+    image: dipandhali2021/companyms-v0:latest
     ports:
       - 8081:8081
     depends_on:
@@ -77,7 +77,7 @@ services:
 
   jobms:
     container_name: job
-    image: dipandhali2021/jobms:latest
+    image: dipandhali2021/jobms-v0:latest
     ports:
       - 8082:8082
     depends_on:
@@ -92,7 +92,7 @@ services:
 
   reviewms:
     container_name: review
-    image: dipandhali2021/reviewms:latest
+    image: dipandhali2021/reviewms-v0:latest
     ports:
       - 8083:8083
     depends_on:
@@ -107,7 +107,7 @@ services:
 
   gatewayms:
     container_name: gateway
-    image: dipandhali2021/gateway-ms:latest
+    image: dipandhali2021/gatewayms-v0:latest
     ports:
       - 8084:8084
     depends_on:
