remove pg admin

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,22 +15,22 @@ services:
     restart: unless-stopped
     mem_limit: 256m
 
-  pgadminms:
-    container_name: pgadminms
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@mifos.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
+  # pgadminms:
+  #   container_name: pgadminms
+  #   image: dpage/pgadmin4
+  #   environment:
+  #     PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-admin@mifos.org}
+  #     PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+  #     PGADMIN_CONFIG_SERVER_MODE: 'False'
 
-    volumes:
-      - pgadmin:/var/lib/pgadmin
-    ports:
-      - "5050:80"
-    networks:
-      - jobapp
-    restart: unless-stopped
-    mem_limit: 256m
+  #   volumes:
+  #     - pgadmin:/var/lib/pgadmin
+  #   ports:
+  #     - "5050:80"
+  #   networks:
+  #     - jobapp
+  #   restart: unless-stopped
+  #   mem_limit: 256m
 
 
   # config-server-ms:
