compose service reg and config server

--- a/configserver/src/main/resources/application-docker.properties
+++ b/configserver/src/main/resources/application-docker.properties
@@ -6,4 +6,4 @@ spring.cloud.config.server.git.uri=https://github.com/dipandhali2021/JobApp-Conf
 
 #zipkin
 management.tracing.sampling.probability=1.0
-management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.zipkin.tracing.endpoint=http://43.205.139.17:9411/zipkin
