--- a/companyms/src/main/resources/application.properties
+++ b/companyms/src/main/resources/application.properties
@@ -8,7 +8,7 @@ review-service.url=http://localhost:8083
 
 
 #Postgresql Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/company
+spring.datasource.url=jdbc:postgresql://43.205.139.17:5432/company
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
@@ -17,16 +17,17 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=https://service-reg-ms.onrender.com
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 
 
 #zipkin
 management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://43.205.139.17:9411/zipkin
 
 #rabbitmq
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=43.205.139.17
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
