added readme and updated the application properties

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,42 +1,38 @@
-spring.application.name=gateway
-server.port=8084
+spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=${SERVER_PORT}
 
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
+eureka.client.register-with-eureka=${EUREKA_CLIENT_REGISTER_WITH_EUREKA}
+eureka.client.fetch-registry=${EUREKA_CLIENT_FETCH_REGISTRY}
 
 #zipkin
-management.tracing.sampling.probability=1.0
+management.tracing.sampling.probability=${MANAGEMENT_TRACING_SAMPLING_PROBABILITY}
 
 #Gateway
-spring.cloud.gateway.mvc.routes[0].id=jobms
-spring.cloud.gateway.mvc.routes[0].uri=lb://JOBMS-DEV
-spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/jobs/**
+spring.cloud.gateway.mvc.routes[0].id=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_0_ID}
+spring.cloud.gateway.mvc.routes[0].uri=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_0_URI}
+spring.cloud.gateway.mvc.routes[0].predicates[0]=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_0_PREDICATES_0}
 
-spring.cloud.gateway.mvc.routes[1].id=companyms
-spring.cloud.gateway.mvc.routes[1].uri=lb://COMPANYMS
-spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/companies/**
+spring.cloud.gateway.mvc.routes[1].id=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_1_ID}
+spring.cloud.gateway.mvc.routes[1].uri=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_1_URI}
+spring.cloud.gateway.mvc.routes[1].predicates[0]=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_1_PREDICATES_0}
 
-spring.cloud.gateway.mvc.routes[2].id=reviewms
-spring.cloud.gateway.mvc.routes[2].uri=lb://REVIEWMS
-spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/reviews/**
-
+spring.cloud.gateway.mvc.routes[2].id=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_2_ID}
+spring.cloud.gateway.mvc.routes[2].uri=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_2_URI}
+spring.cloud.gateway.mvc.routes[2].predicates[0]=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_2_PREDICATES_0}
 
 #Eureka Server
-spring.cloud.gateway.mvc.routes[3].id=eureka_service
-spring.cloud.gateway.mvc.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.mvc.routes[3].predicates[0]=Path=/eureka/main
-spring.cloud.gateway.mvc.routes[3].filters[0]=setPath=/
+spring.cloud.gateway.mvc.routes[3].id=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_3_ID}
+spring.cloud.gateway.mvc.routes[3].uri=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_3_URI}
+spring.cloud.gateway.mvc.routes[3].predicates[0]=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_3_PREDICATES_0}
+spring.cloud.gateway.mvc.routes[3].filters[0]=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_3_FILTERS_0}
 
-
-
-spring.cloud.gateway.mvc.routes[4].id=eureka_service_static
-spring.cloud.gateway.mvc.routes[4].uri=http://localhost:8761
-spring.cloud.gateway.mvc.routes[4].predicates[0]=Path=/eureka/**
-
+spring.cloud.gateway.mvc.routes[4].id=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_4_ID}
+spring.cloud.gateway.mvc.routes[4].uri=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_4_URI}
+spring.cloud.gateway.mvc.routes[4].predicates[0]=${SPRING_CLOUD_GATEWAY_MVC_ROUTES_4_PREDICATES_0}
 
 #Logging
-logging.level.root=info
-logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
-logging.level.org.springframework.cloud.gateway=TRACE
+logging.level.root=${LOGGING_LEVEL_ROOT}
+logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CLOUD_GATEWAY_ROUTE_ROUTEDEFINITIONLOCATOR}
+logging.level.org.springframework.cloud.gateway=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CLOUD_GATEWAY}
