--- a/jobms/src/main/resources/application.properties
+++ b/jobms/src/main/resources/application.properties
@@ -1,56 +1,51 @@
-spring.application.name=jobms
-server.port=8082
+spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=${SERVER_PORT}
 
-
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
+job-service.url=${JOB_SERVICE_URL}
+company-service.url=${COMPANY_SERVICE_URL}
+review-service.url=${REVIEW_SERVICE_URL}
 
 #Postgresql Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/job
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.database=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+spring.jpa.database=${SPRING_JPA_DATABASE}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
 
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
+eureka.client.register-with-eureka=${EUREKA_CLIENT_REGISTER_WITH_EUREKA}
+eureka.client.fetch-registry=${EUREKA_CLIENT_FETCH_REGISTRY}
 
 #zipkin
-management.tracing.sampling.probability=1.0
-
+management.tracing.sampling.probability=${MANAGEMENT_TRACING_SAMPLING_PROBABILITY}
+management.zipkin.tracing.endpoint=${MANAGEMENT_ZIPKIN_TRACING_ENDPOINT}
 
 #config-server
-spring.config.import=optional:configserver:http://localhost:8080
-spring.profiles.active=dev
-
+spring.config.import=${SPRING_CONFIG_IMPORT}
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 #Resilience4j
-resilience4j.circuitbreaker.instances.jobBreaker.registerHealthIndicator=true
-resilience4j.circuitbreaker.instances.jobBreaker.slidingWindowSize=10
-resilience4j.circuitbreaker.instances.jobBreaker.minimumNumberOfCalls=5
-resilience4j.circuitbreaker.instances.jobBreaker.permittedNumberOfCallsInHalfOpenState=3
-resilience4j.circuitbreaker.instances.jobBreaker.waitDurationInOpenState=10s
-resilience4j.circuitbreaker.instances.jobBreaker.failureRateThreshold=50
-resilience4j.circuitbreaker.instances.jobBreaker.register-health-indicator=true
-resilience4j.circuitbreaker.instances.jobBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
-resilience4j.circuitbreaker.instances.jobBreaker.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.jobBreaker.registerHealthIndicator=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_REGISTERHEALTHINDICATOR}
+resilience4j.circuitbreaker.instances.jobBreaker.slidingWindowSize=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_SLIDINGWINDOWSIZE}
+resilience4j.circuitbreaker.instances.jobBreaker.minimumNumberOfCalls=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_MINIMUMNUMBEROFCALLS}
+resilience4j.circuitbreaker.instances.jobBreaker.permittedNumberOfCallsInHalfOpenState=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_PERMITTEDNUMBEROFCALLSINHALFOPENSTATE}
+resilience4j.circuitbreaker.instances.jobBreaker.waitDurationInOpenState=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_WAITDURATIONINOPENSTATE}
+resilience4j.circuitbreaker.instances.jobBreaker.failureRateThreshold=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_FAILURERATETHRESHOLD}
+resilience4j.circuitbreaker.instances.jobBreaker.register-health-indicator=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_REGISTER_HEALTH_INDICATOR}
+resilience4j.circuitbreaker.instances.jobBreaker.automaticTransitionFromOpenToHalfOpenEnabled=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_AUTOMATICTRANSITIONFROMOPENTOHALFOPENENABLED}
+resilience4j.circuitbreaker.instances.jobBreaker.sliding-window-type=${RESILIENCE4J_CIRCUITBREAKER_INSTANCES_JOBBREAKER_SLIDING_WINDOW_TYPE}
 
-resilience4j.retry.instances.jobBreaker.max-attempts=5
-resilience4j.retry.instances.jobBreaker.wait-duration=2s
+resilience4j.retry.instances.jobBreaker.max-attempts=${RESILIENCE4J_RETRY_INSTANCES_JOBBREAKER_MAX_ATTEMPTS}
+resilience4j.retry.instances.jobBreaker.wait-duration=${RESILIENCE4J_RETRY_INSTANCES_JOBBREAKER_WAIT_DURATION}
 
-
-resilience4j.ratelimiter.instances.jobBreaker.limit-for-period=5
-resilience4j.ratelimiter.instances.jobBreaker.limit-refresh-period=4
-resilience4j.ratelimiter.instances.jobBreaker.timeout-duration=10
+resilience4j.ratelimiter.instances.jobBreaker.limit-for-period=${RESILIENCE4J_RATELIMITER_INSTANCES_JOBBREAKER_LIMIT_FOR_PERIOD}
+resilience4j.ratelimiter.instances.jobBreaker.limit-refresh-period=${RESILIENCE4J_RATELIMITER_INSTANCES_JOBBREAKER_LIMIT_REFRESH_PERIOD}
+resilience4j.ratelimiter.instances.jobBreaker.timeout-duration=${RESILIENCE4J_RATELIMITER_INSTANCES_JOBBREAKER_TIMEOUT_DURATION}
 
 #Actuator
-management.health.circuitbreakers.enabled=true
-management.endpoints.web.exposure.include=health
-management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=${MANAGEMENT_HEALTH_CIRCUITBREAKERS_ENABLED}
+management.endpoints.web.exposure.include=${MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE}
+management.endpoint.health.show-details=${MANAGEMENT_ENDPOINT_HEALTH_SHOW_DETAILS}
