--- a/reviewms/src/main/resources/application.properties
+++ b/reviewms/src/main/resources/application.properties
@@ -1,33 +1,30 @@
-spring.application.name=reviewms
-server.port=8083
+spring.application.name=${SPRING_APPLICATION_NAME}
+server.port=${SERVER_PORT}
 
-job-service.url=http://localhost:8082
-company-service.url=http://localhost:8081
-review-service.url=http://localhost:8083
-
+job-service.url=${JOB_SERVICE_URL}
+company-service.url=${COMPANY_SERVICE_URL}
+review-service.url=${REVIEW_SERVICE_URL}
 
 #Postgresql Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/review
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.database=POSTGRESQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
+spring.jpa.database=${SPRING_JPA_DATABASE}
+spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
 
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
+eureka.client.register-with-eureka=${EUREKA_CLIENT_REGISTER_WITH_EUREKA}
+eureka.client.fetch-registry=${EUREKA_CLIENT_FETCH_REGISTRY}
 
 #zipkin
-management.tracing.sampling.probability=1.0
+management.tracing.sampling.probability=${MANAGEMENT_TRACING_SAMPLING_PROBABILITY}
+management.zipkin.tracing.endpoint=${MANAGEMENT_ZIPKIN_TRACING_ENDPOINT}
 
 #rabbitmq
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
-
-
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST}
+spring.rabbitmq.port=${SPRING_RABBITMQ_PORT}
+spring.rabbitmq.username=${SPRING_RABBITMQ_USERNAME}
+spring.rabbitmq.password=${SPRING_RABBITMQ_PASSWORD}
