--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.application.name=config-server
+spring.application.name=${SPRING_APPLICATION_NAME}
 #Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.cloud.config.server.git.uri=https://github.com/dipandhali2021/JobApp-Config
+eureka.client.service-url.defaultZone=${EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE}
+spring.cloud.config.server.git.uri=${SPRING_CLOUD_CONFIG_SERVER_GIT_URI}
+
+#zipkin
+management.tracing.sampling.probability=${MANAGEMENT_TRACING_SAMPLING_PROBABILITY}
+management.zipkin.tracing.endpoint=${MANAGEMENT_ZIPKIN_TRACING_ENDPOINT}
